tests/checker/diagnostics/0898_gadt_local_abstract_return_mismatch_04.ml.infer.expected
File "0898_gadt_local_abstract_return_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0898_gadt_local_abstract_return_mismatch_04 is not a valid module name.

File "0898_gadt_local_abstract_return_mismatch_04.ml", line 9, characters 21-22:
9 |     | WBool_delta -> x
                         ^
Error: The value x has type a = bool but an expression was expected of type
         int
